--- a/Login.html
+++ b/Login.html
@@ -19,12 +19,12 @@
         </div>
         <div id="navoverlay">
             <div id="overlaycontent">
-              <a href="../FBLA_Menu/Menu.html">Menu</a>
-              <a href="/index.html" id="navovlogin">Home</a>
+              <a href="https://yahirconejo.github.io/2Menu/Menu">Menu</a>
+              <a href="https://yahirconejo.github.io/2Home/" id="navovlogin">Home</a>
             </div>
          </div>
 
-        <form action="../FBLA_Menu/Menu.html">
+        <form action="https://yahirconejo.github.io/2Menu/Menu">
             <div id="square">
             <div class="container">
               <h1>Sign Up</h1>
